--- a/potato.css
+++ b/potato.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i);
+
 html,
 body {
     height: 100%;
