--- a/potato.css
+++ b/potato.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i);
 
+/* Global */
 html, body {
     height: 100%;
     width: 100%;
@@ -12,4 +13,58 @@ html, body {
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.5;
     color: #333;
+}
+
+
+/* Text alignament */
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+/* Float align */
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+/* Font styles */
+.font-light {
+  font-weight: lighter;
+}
+
+.font-normal {
+  font-weight: normal;
+}
+
+.font-bold {
+  font-weight: bold;
+}
+
+/* Unordered list markers */
+
+.l-circle-item {
+  list-style-type: circle;
+}
+
+.l-square-item {
+  list-style-type: square;
+}
+
+.l-roman-item {
+  list-style-type: upper-roman;
+}
+
+.l-alpha-item {
+  list-style-type: lower-alpha;
 }
