Fixed merge conflicts

--- a/potato.css
+++ b/potato.css
@@ -196,3 +196,54 @@ html, body {
         width: 96%;
     }
 }
+
+
+/* Utilities */
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+.font-light {
+  font-weight: lighter;
+}
+
+.font-normal {
+  font-weight: normal;
+}
+
+.font-bold {
+  font-weight: bold;
+}
+
+/* Unordered list markers */
+.l-circle-item {
+  list-style-type: circle;
+}
+
+.l-square-item {
+  list-style-type: square;
+}
+
+.l-roman-item {
+  list-style-type: upper-roman;
+}
+
+.l-alpha-item {
+  list-style-type: lower-alpha;
+}
