Added Style for Table class

--- a/potato.css
+++ b/potato.css
@@ -248,3 +248,17 @@ html, body {
 .l-alpha-item {
   list-style-type: lower-alpha;
 }
+
+table, td, th {
+    border: 1px solid black;
+     padding: 5px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    height: 30px;
+}
