--- a/potato.css
+++ b/potato.css
@@ -13,7 +13,7 @@ html, body {
 * {
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
-    color: #333;
+    color: #fff;
 }
 
 /* Typography */
