--- a/Potato.scss
+++ b/Potato.scss
@@ -1,12 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i);
 
 $sans-serif: 'Roboto', sans-serif;
-$primary-color: #333;
-$border-color: #ccc;
-$white-color: #fff;
-$green-color: #27ae60;
-$yellow-color: #f39c12;
-$pink-color: #e74c3c;
+
+$success-color: #27ae60;
+$warning-color: #f39c12;
+$danger-color: #e74c3c;
+
 $primary-width: 96%;
 $one-width: 4.33%;
 $two-width: 12.66%;
@@ -29,10 +28,6 @@ html, body {
     padding: 0;
 }
 
-@mixin width-potatoes($width){
-    width: $width;
-}
-
 /*Typography*/
 @mixin typography($numeral: 0) {
     margin: 5px 0;
@@ -48,10 +43,8 @@ html, body {
     font-family: $sans-serif;
     font-weight: lighter;
     line-height: 1.5;
-    color: $primary-color;
+    color: #333;
 }
-
-
 
 h1 {
     @include typography(6);
@@ -76,7 +69,6 @@ h5 {
 h6 {
     @include typography();
 }
-
 
 @media screen and (min-width: 40em) {
     h1 {
@@ -106,136 +98,146 @@ h6 {
 
 /* Grid */
 .container {
-    @include width-potatoes($primary-width);
+    width: $primary-width;
     position: relative;
     max-width: 10 * $primary-width;
     margin: 0 auto;
+
+    &:after {
+        content: "";
+        clear: both;
+        display: table;
+    }
 }
 
 .row {
     position: relative;
     width: $primary-width;
+
     .potato, .potatoes {
         float: left;
         margin: 8px 2%;
         min-height: 2px;
     }
-}
 
-.container {
     &:after {
-    content: "";
-    clear: both;
-    display: table;
+        content: "";
+        clear: both;
+        display: table;
     }
 }
 
 .potato, .potatoes {
-    @include width-potatoes($primary-width);
+    width: $primary-width;
     float: left;
+}
+
+
+@mixin width-potatoes($width){
+    width: $width;
 }
 
 /* Small - Mobile */
 .one-small {
     &.potato, &.potatoes {
-        @include width-potatoes($one-width);
+        width: $one-width;
     }
 }
 
 .two-small.potatoes {
-    @include width-potatoes($two-width);
+    width: $two-width;
 }
 
 .three-small.potatoes {
-    @include width-potatoes($three-width);
+    width: $three-width;
 }
 
 .four-small.potatoes {
-    @include width-potatoes($four-width);
+    width: $four-width;
 }
 
 .five-small.potatoes {
-    @include width-potatoes($five-width);
+    width: $five-width;
 }
 
 .six-small.potatoes {
-    @include width-potatoes($six-width);
+    width: $six-width;
 }
 
 .seven-small.potatoes {
-    @include width-potatoes($seven-width);
+    width: $seven-width;
 }
 
 .eight-small.potatoes {
-    @include width-potatoes($eight-width);
+    width: $eight-width;
 }
 
 .nine-small.potatoes {
-    @include width-potatoes($nine-width);
+    width: $nine-width;
 }
 
 .ten-small.potatoes {
-    @include width-potatoes($ten-width);
+    width: $ten-width;
 }
 
 .eleven-small.potatoes {
-    @include width-potatoes($eleven-width);
+    width: $eleven-width;
 }
 
 .twelve-small.potatoes {
-    @include width-potatoes($primary-width);
+    width: $primary-width;
 }
 
 /* Medium - Tablet */
 @media screen and (min-width: 40em) {
     .one-medium {
         &.potato, &.potatoes {
-              @include width-potatoes($one-width);
+              width: $one-width;
         }
     }
 
     .two-medium.potatoes {
-        @include width-potatoes($two-width);
+        width: $two-width;
     }
 
     .three-medium.potatoes {
-        @include width-potatoes($three-width);
+        width: $three-width;
     }
 
     .four-medium.potatoes {
-        @include width-potatoes($four-width);
+        width: $four-width;
     }
 
     .five-medium.potatoes {
-        @include width-potatoes($five-width);
+        width: $five-width;
     }
 
     .six-medium.potatoes {
-        @include width-potatoes($six-width);
+        width: $six-width;
     }
 
     .seven-medium.potatoes {
-        @include width-potatoes($seven-width);
+        width: $seven-width;
     }
 
     .eight-medium.potatoes {
-        @include width-potatoes($eight-width);
+        width: $eight-width;
     }
 
     .nine-medium.potatoes {
-        @include width-potatoes($nine-width);
+        width: $nine-width;
     }
 
     .ten-medium.potatoes {
-        @include width-potatoes($ten-width);
+        width: $ten-width;
     }
 
     .eleven-medium.potatoes {
-        @include width-potatoes($eleven-width);
+        width: $eleven-width;
     }
 
     .twelve-medium.potatoes {
-        @include width-potatoes($primary-width);
+        width: $primary-width;
     }
 
 }
@@ -244,52 +246,52 @@ h6 {
 @media screen and (min-width: 64em) {
     .one-large {
         &.potato, &.potatoes {
-        @include width-potatoes($one-width);
+        width: $one-width;
         }
     }
 
     .two-large.potatoes {
-        @include width-potatoes($two-width);
+        width: $two-width;
     }
 
     .three-large.potatoes {
-        @include width-potatoes($three-width);
+        width: $three-width;
     }
 
     .four-large.potatoes {
-        @include width-potatoes($four-width);
+        width: $four-width;
     }
 
     .five-large.potatoes {
-        @include width-potatoes($five-width);
+        width: $five-width;
     }
 
     .six-large.potatoes {
-        @include width-potatoes($six-width);
+        width: $six-width;
     }
 
     .seven-large.potatoes {
-        @include width-potatoes($seven-width);
+        width: $seven-width;
     }
 
     .eight-large.potatoes {
-        @include width-potatoes($eight-width);
+        width: $eight-width;
     }
 
     .nine-large.potatoes {
-        @include width-potatoes($nine-width);
+        width: $nine-width;
     }
 
     .ten-large.potatoes {
-        @include width-potatoes($ten-width);
+        width: $ten-width;
     }
 
     .eleven-large.potatoes {
-        @include width-potatoes($eleven-width);
+        width: $eleven-width;
     }
 
     .twelve-large.potatoes {
-        @include width-potatoes($primary-width);
+        width: $primary-width;
     }
 }
 
@@ -370,153 +372,165 @@ input[type="radio"] + label, input[type="checkbox"] + label  {
 }
 
 ::-webkit-input-placeholder {
-   color: $primary-color;
+   color: #333;
 }
 
 :-moz-placeholder {
-   color: primary-color;
+   color: #333;
 }
 
 ::-moz-placeholder {
-   color: primary-color;
+   color: #333;
 }
 
 :-ms-input-placeholder {
-   color: primary-color;
+   color: #333;
 }
 
 /* Other */
 hr {
     position: relative;
     width: $primary-width;
-    border: solid $border-color;
+    border: solid #ccc;
     border-width: 1px 0 0;
     clear: both;
 }
 
 /* Buttons */
 
-@mixin button-border($border-color) {
-  border: 1px solid $border-color;
+@mixin button-border($border-color: #333) {
+    border: 1px solid $border-color;
 }
 
-@mixin button-color($background-color: $white-color, $color: $primary-color)
+@mixin button-color($background-color: #fff, $color: #333)
 {
-  background-color: $background-color;
-  color: $color;
+    background-color: $background-color;
+    color: $color;
 }
 
 @mixin button-size($pad1, $pad2, $font)
 {
-  padding: $pad1 $pad2;
-  font-size: $font;
+    padding: $pad1 $pad2;
+    font-size: $font;
 }
 
 @mixin button-config() {
-  @include button-color();
-  @include button-border($primary-color);
-  @include button-size(14px, 20px, 1em);
-  display: inline-block;
-  text-align: center;
-  line-height: 1;
-  cursor: pointer;
-  border-radius: 4px;
-  margin: 0 0 20px 0;
-  position: relative;
-  white-space: nowrap;
-  vertical-align: middle;
-  text-decoration: none;
-  -webkit-appearance: none;
-  -webkit-transition: background-color 0.2s ease-out, color 0.2s ease-out;
-  transition: background-color 0.2s ease-out, color 0.2s ease-out;
+    @include button-color();
+    @include button-border(#333);
+    @include button-size(14px, 20px, 1em);
+    display: inline-block;
+    text-align: center;
+    line-height: 1;
+    cursor: pointer;
+    border-radius: 4px;
+    margin: 0 0 20px 0;
+    position: relative;
+    white-space: nowrap;
+    vertical-align: middle;
+    text-decoration: none;
+    -webkit-appearance: none;
+    -webkit-transition: background-color 0.2s ease-out, color 0.2s ease-out;
+    transition: background-color 0.2s ease-out, color 0.2s ease-out;
 }
 
 .button {
     @include button-config();
 
     &:hover, &:focus {
-      @include button-color($primary-color, $white-color);
+        @include button-color(#333, #fff);
     }
-    &.success {
-      @include button-color($white-color, $green-color);
-      border: 1px solid $green-color;
 
-      &:hover, &:focus {
-          @include button-color($green-color, $white-color);
-      }
+    &.success {
+        @include button-color(#fff, $success-color);
+        border: 1px solid $success-color;
+
+        &:hover, &:focus {
+            @include button-color($success-color, #fff);
+        }
     }
+
     &.warning {
-      @include button-color($white-color, $yellow-color);
-      border: 1px solid $yellow-color;
-      &:hover, &:focus {
-        @include button-color($yellow-color, $white-color);
-      }
+        @include button-color(#fff, $warning-color);
+        border: 1px solid $warning-color;
+
+        &:hover, &:focus {
+            @include button-color($warning-color, #fff);
+        }
     }
+
     &.danger {
-      @include button-color($white-color, $pink-color);
-      border: 1px solid $pink-color;
-      &:hover, &:focus {
-        @include button-color($pink-color, $white-color);
-      }
+        @include button-color(#fff, $danger-color);
+        border: 1px solid $danger-color;
+
+        &:hover, &:focus {
+            @include button-color($danger-color, #fff);
+        }
     }
+
     &.small {
-      @include button-size(10px, 16px, 0.750em);
+        @include button-size(10px, 16px, 0.750em);
     }
+
     &.large {
-      @include button-size(16px, 30px, 1.5em);
+        @include button-size(16px, 30px, 1.5em);
     }
+
     &.expanded {
-      display: block;
-      max-width: 100%;
+        display: block;
+        max-width: 100%;
     }
 }
 
 /* Utilities */
 .text-center {
-  text-align: center;
+    text-align: center;
 }
 
 .text-right {
-  text-align: right;
+    text-align: right;
+}
+
+.text-left {
+    text-align: left;
 }
 
 .text-justify {
-  text-align: justify;
+    text-align: justify;
 }
 
 .float-left {
-  float: left;
+    float: left;
 }
 
 .float-right {
-  float: right;
+    float: right;
 }
 
 .font-light {
-  font-weight: lighter;
+    font-weight: lighter;
 }
 
 .font-normal {
-  font-weight: normal;
+    font-weight: normal;
 }
 
 .font-bold {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 /* Unordered list markers */
 .circle-potato {
-  list-style-type: circle;
+    list-style-type: circle;
 }
 
 .square-potato {
-  list-style-type: square;
+    list-style-type: square;
 }
 
 .roman-potato {
-  list-style-type: upper-roman;
+    list-style-type: upper-roman;
 }
 
 .alpha-potato {
-  list-style-type: lower-alpha;
+    list-style-type: lower-alpha;
 }
