--- a/css/potato.css
+++ b/css/potato.css
@@ -1,8 +1,27 @@
-/* Font */
+/*\
+|*| Author   : Edvins Antonovs 
+|*| Date     : 11th October 2016
+|*| License  : <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/license.md>
+|*| Language : CSS
+\*/
+
+/* Import Google Font "Roboto" */
+
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i);
 
-/* Global */
-html, body {
+/* Global styles */
+
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    /* IE 8+ to use box-sizing, < IE 9 support is pretty much void at this point */
+}
+
+html,
+body {
     height: 100%;
     width: 100%;
     font-size: 100%;
@@ -10,18 +29,18 @@ html, body {
     padding: 0;
 }
 
+/*Typography*/
+
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", "Helvetica Neue", "Helvetica", Arial, Sans-Serif;
     font-weight: lighter;
     line-height: 1.5;
     color: #333;
-
 }
 
-/* Typography */
 h1, h2, h3, h4, h5, h6 {
     margin: 5px 0;
-    font-weight: lighter;
+    font-weight: normal;
     font-style: normal;
     line-height: 1.5;
     text-transform: none;
@@ -29,42 +48,30 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 1.750em;
+    font-size: 2em;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 1.75em;
 }
 
 h3 {
-    font-size: 1.250em;
+    font-size: 1.5em;
 }
 
 h4 {
-    font-size: 1.125em;
+    font-size: 1.25em;
 }
 
 h5 {
-    font-size: 1em;
+    font-size: .75em;
 }
 
 h6 {
-    font-size: 1em;
+    font-size: .5em;
 }
 
-a {
-    text-decoration: none;
-    border-bottom: 1px dotted #333;
-    -webkit-transition: border-bottom 0.2s ease-out, color 0.2s ease-out;
-    transition: border-bottom 0.2s ease-out, color 0.2s ease-out;
-}
-
-a:hover {
-    color: #919191;
-    border-bottom: 1px dotted #919191;
-}
-
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 40em) { 
     h1 {
         font-size: 1.875em;
     }
@@ -78,7 +85,7 @@ a:hover {
     }
 
     h4 {
-        font-size: 1.250em;
+        font-size: 1.25em;
     }
 
     h5 {
@@ -86,17 +93,23 @@ a:hover {
     }
 
     h6 {
-        font-size: 1em;
+        font-size: .875em;
     }
 }
 
-
 /* Grid */
+
 .container {
-    position: relative;
     width: 96%;
-    max-width: 960px;
+    position: relative;
+    max-width: 960%;
     margin: 0 auto;
+}
+
+.container:after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 .row {
@@ -104,184 +117,124 @@ a:hover {
     width: 96%;
 }
 
-.potato, .potatoes {
-    width: 96%;
-    float: left;
-}
+    .row .potato,
+    .row .potatoes {
+        margin: 8px 2%;
+        min-height: 2px;
+    }
 
-.row .potato, .row .potatoes {
-    float: left;
-    margin: 8px 2%;
-    min-height: 2px;
-}
-
-.container:after, .row:after {
+.row:after {
     content: "";
     clear: both;
     display: table;
 }
 
-.potato + .potato.end, .potatoes + .potato.end, .potato + .potatoes.end, .potatoes + .potatoes.end {
-    float: left;
-}
-.potato + .potato:last-child, .potatoes + .potato:last-child, .potato + .potatoes:last-child, .potatoes + .potatoes:last-child {
-    float: right;
-}
-
-/* Small - Mobile */
-.one-small.potato, .one-small.potatoes {
-    width: 4.33%;
-}
-
-.two-small.potatoes {
-    width: 12.66%;
-}
-
-.three-small.potatoes {
-    width: 21%;
-}
-
-.four-small.potatoes {
-    width: 29.33%;
-}
-
-.five-small.potatoes {
-    width: 37.66%;
-}
-
-.six-small.potatoes {
-    width: 46%;
-}
-
-.seven-small.potatoes {
-    width: 54.33%;
-}
-
-.eight-small.potatoes {
-    width: 62.66%;
-}
-
-.nine-small.potatoes {
-    width: 71%;
-}
-
-.ten-small.potatoes {
-    width: 79.33%;
-}
-
-.eleven-small.potatoes {
-    width: 87.66%;
-}
-
-.twelve-small.potatoes {
+.potato,
+.potatoes {
     width: 96%;
+    float: left !important;
 }
 
-/* Medium - Tablet */
-@media screen and (min-width: 40em) {
+/* Mobile (Small) */
 
-    .one-medium.potato, .one-medium.potatoes {
-        width: 4.33%;
-    }
+.one-small.potato,
+.one-small.potatoes { width: 4.33%; }
 
-    .two-medium.potatoes {
-        width: 12.66%;
-    }
+.two-small.potatoes { width: 12.66%; }
 
-    .three-medium.potatoes {
-        width: 21%;
-    }
+.three-small.potatoes { width: 21%; }
 
-    .four-medium.potatoes {
-        width: 29.33%;
-    }
+.four-small.potatoes { width: 29.33%; }
 
-    .five-medium.potatoes {
-        width: 37.66%;
-    }
+.five-small.potatoes { width: 37.66%; }
 
-    .six-medium.potatoes {
-        width: 46%;
-    }
+.six-small.potatoes { width: 46%; }
 
-    .seven-medium.potatoes {
-        width: 54.33%;
-    }
+.seven-small.potatoes { width: 54.33%; }
 
-    .eight-medium.potatoes {
-        width: 62.66%;
-    }
+.eight-small.potatoes { width: 62.66%; }
 
-    .nine-medium.potatoes {
-        width: 71%;
-    }
+.nine-small.potatoes { width: 71%; }
 
-    .ten-medium.potatoes {
-        width: 79.33%;
-    }
+.ten-small.potatoes { width: 79.33%; }
 
-    .eleven-medium.potatoes {
-        width: 87.66%;
-    }
+.eleven-small.potatoes { width: 87.66%; }
 
-    .twelve-medium.potatoes {
-        width: 96%;
-    }
+.twelve-small.potatoes { width: 96%; }
 
+/* Tablet (Medium) */
+
+@media screen and (min-width: 40em) { 
+    .one-medium.potato,
+    .one-medium.potatoes { width: 4.33%; }
+
+    .two-medium.potatoes { width: 12.66%; }
+
+    .three-medium.potatoes { width: 21%; }
+
+    .four-medium.potatoes { width: 29.33%; }
+
+    .five-medium.potatoes { width: 37.66%; }
+
+    .six-medium.potatoes { width: 46%; }
+
+    .seven-medium.potatoes { width: 54.33%; }
+
+    .eight-medium.potatoes { width: 62.66%; }
+
+    .nine-medium.potatoes { width: 71%; }
+
+    .ten-medium.potatoes { width: 79.33%; }
+
+    .eleven-medium.potatoes { width: 87.66%; }
+
+    .twelve-medium.potatoes { width: 96%; }
 }
 
-/* large - Desktop */
-@media screen and (min-width: 64em) {
-    .one-large.potato, .one-large.potatoes {
-        width: 4.33%;
-    }
+/* Desktop (Large) */
 
-    .two-large.potatoes {
-        width: 12.66%;
-    }
+@media screen and (min-width: 64em) { 
+    .one-large.potato,
+    .one-large.potatoes { width: 4.33%; }
 
-    .three-large.potatoes {
-        width: 21%;
-    }
+    .two-large.potatoes { width: 12.66%; }
 
-    .four-large.potatoes {
-        width: 29.33%;
-    }
+    .three-large.potatoes { width: 21%; }
 
-    .five-large.potatoes {
-        width: 37.66%;
-    }
+    .four-large.potatoes { width: 29.33%; }
 
-    .six-large.potatoes {
-        width: 46%;
-    }
+    .five-large.potatoes { width: 37.66%; }
 
-    .seven-large.potatoes {
-        width: 54.33%;
-    }
+    .six-large.potatoes { width: 46%; }
 
-    .eight-large.potatoes {
-        width: 62.66%;
-    }
+    .seven-large.potatoes { width: 54.33%; }
 
-    .nine-large.potatoes {
-        width: 71%;
-    }
+    .eight-large.potatoes { width: 62.66%; }
 
-    .ten-large.potatoes {
-        width: 79.33%;
-    }
+    .nine-large.potatoes { width: 71%; }
 
-    .eleven-large.potatoes {
-        width: 87.66%;
-    }
+    .ten-large.potatoes { width: 79.33%; }
 
-    .twelve-large.potatoes {
-        width: 96%;
-    }
+    .eleven-large.potatoes { width: 87.66%; }
+
+    .twelve-large.potatoes { width: 96%; }
 }
 
-input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], select, textarea {
+/* Form */
+
+.input_text,
+input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="datetime"],
+input[type="email"],
+input[type="number"],
+input[type="tel"],
+input[type="time"],
+input[type="url"],
+input[type="color"],
+select,
+textarea {
     background-color: #fff;
     border: 1px solid #333;
     color: #333;
@@ -293,9 +246,6 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
     margin: 0 0 20px 0;
     padding: 0 10px;
     width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
 }
 
 textarea {
@@ -304,31 +254,21 @@ textarea {
     line-height: 1.5;
 }
 
-label {
-    display: block;
-}
+label { display: block; }
 
-input[type="radio"] + label, input[type="checkbox"] + label  {
-    display: inline-block;
-}
+input[type="radio"] + label,
+input[type="checkbox"] + label { display: inline-block; }
 
-::-webkit-input-placeholder {
-   color: #333;
-}
+::-webkit-input-placeholder { color: #333; }
 
-:-moz-placeholder {
-   color: #333;
-}
+:-moz-placeholder { color: #333 ;}
 
-::-moz-placeholder {
-   color: #333;
-}
+::-moz-placeholder { color: #333; }
 
-:-ms-input-placeholder {
-   color: #333;
-}
+:-ms-input-placeholder { color: #333; }
 
 /* Other */
+
 hr {
     position: relative;
     width: 96%;
@@ -338,18 +278,19 @@ hr {
 }
 
 /* Buttons */
+
 .button {
     background-color: #fff;
-    border: 1px solid #333;
     color: #333;
+    border: 1px solid #333;
+    padding: 14px 20px;
+    font-size: 1em;
     display: inline-block;
     text-align: center;
     line-height: 1;
     cursor: pointer;
     border-radius: 4px;
-    padding: 14px 20px;
     margin: 0 0 20px 0;
-    font-size: 1em;
     position: relative;
     white-space: nowrap;
     vertical-align: middle;
@@ -359,7 +300,8 @@ hr {
     transition: background-color 0.2s ease-out, color 0.2s ease-out;
 }
 
-.button:hover, .button:focus {
+.button:hover,
+.button:focus {
     background-color: #333;
     color: #fff;
 }
@@ -370,7 +312,8 @@ hr {
     border: 1px solid #27ae60;
 }
 
-.button.success:hover, .button.success:focus {
+.button.success:hover,
+.button.success:focus {
     background-color: #27ae60;
     color: #fff;
 }
@@ -381,7 +324,8 @@ hr {
     border: 1px solid #f39c12;
 }
 
-.button.warning:hover, .button.warning:focus {
+.button.warning:hover,
+.button.warning:focus {
     background-color: #f39c12;
     color: #fff;
 }
@@ -392,14 +336,15 @@ hr {
     border: 1px solid #e74c3c;
 }
 
-.button.danger:hover, .button.danger:focus {
+.button.danger:hover,
+.button.danger:focus {
     background-color: #e74c3c;
     color: #fff;
 }
 
 .button.small {
     padding: 10px 16px;
-    font-size: 0.750em;
+    font-size: 0.75em;
 }
 
 .button.large {
@@ -413,51 +358,31 @@ hr {
 }
 
 /* Utilities */
-.text-center {
-  text-align: center;
-}
 
-.text-right {
-  text-align: right;
-}
+.text-center { text-align: center; }
 
-.text-justify {
-  text-align: justify;
-}
+.text-right { text-align: right; }
 
-.float-left {
-  float: left;
-}
+.text-left { text-align: left; }
 
-.float-right {
-  float: right;
-}
+.text-justify { text-align: justify; }
 
-.font-light {
-  font-weight: lighter;
-}
+.float-left { float: left; }
 
-.font-normal {
-  font-weight: normal;
-}
+.float-right { float: right; }
 
-.font-bold {
-  font-weight: bold;
-}
+.font-light { font-weight: lighter; }
+
+.font-normal { font-weight: normal; }
+
+.font-bold { font-weight: bold; }
 
 /* Unordered list markers */
-.circle-potato {
-  list-style-type: circle;
-}
 
-.square-potato {
-  list-style-type: square;
-}
+.circle-potato { list-style-type: circle; }
 
-.roman-potato {
-  list-style-type: upper-roman;
-}
+.square-potato { list-style-type: square; }
 
-.alpha-potato {
-  list-style-type: lower-alpha;
-}
+.roman-potato { list-style-type: upper-roman; }
+
+.alpha-potato { list-style-type: lower-alpha; }
