fixed value in SASS , echoed changes in LESS/CSS/Minimised CSS

--- a/css/potato.css
+++ b/css/potato.css
@@ -102,7 +102,7 @@ h6 {
 .container {
     width: 96%;
     position: relative;
-    max-width: 960%;
+    max-width: 960px;
     margin: 0 auto;
 }
 
