--- a/less/potato.less
+++ b/less/potato.less
@@ -33,6 +33,8 @@
 @ten-width: 79.33%;
 @eleven-width: 87.66%;
 
+$container-max-width: 960px;
+
 /* Global styles */
 
 *,
@@ -131,7 +133,7 @@ h6 {
 .container {
     width: @primary-width;
     position: relative;
-    max-width: 10 * @primary-width;
+    max-width: @container-max-width;
     margin: 0 auto;
 
     &:after {
