fixed $, replaced with @

--- a/less/potato.less
+++ b/less/potato.less
@@ -33,7 +33,7 @@
 @ten-width: 79.33%;
 @eleven-width: 87.66%;
 
-$container-max-width: 960px;
+@container-max-width: 960px;
 
 /* Global styles */
 
