added author credits

--- a/sass/potato.scss
+++ b/sass/potato.scss
@@ -1,5 +1,5 @@
 /*\
-|*| Author   : Edvins Antonovs <https://github.com/ummahusla>
+|*| Author   : Edvins Antonovs <https://github.com/ummahusla>, Verónica Lona <https://github.com/vmmartinezlona>, Jack Andrew Loudon <https://github.com/blue-eyeswhitedragon>
 |*| Date     : 11th October 2016
 |*| License  : <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/license.md>
 |*| Language : SASS <http://sass-lang.com>
