--- a/less/potato.less
+++ b/less/potato.less
@@ -1,6 +1,6 @@
 /*\
-|*| Author   : Edvins Antonovs <https://github.com/ummahusla>
-|*| Date     : 11th October 2016
+|*| Author   : Edvins Antonovs <https://github.com/ummahusla>, Jack Andrew Loudon <https://github.com/blue-eyeswhitedragon>, Verónica Lona <https://github.com/vmmartinezlona>
+|*| Date     : 14th October 2016
 |*| License  : <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/license.md>
 |*| Language : LESS <http://lesscss.org>
 \*/
@@ -132,8 +132,8 @@ h6 {
 
 .container {
     width: @primary-width;
-    position: relative;
     max-width: @container-max-width;
+    position: relative;
     margin: 0 auto;
 
     &:after {
@@ -481,6 +481,7 @@ hr {
 
     &.success {
         .mixin-button-color(@white-color, @success-color);
+        
         border: 1px solid @success-color;
 
         &:hover, &:focus {
@@ -490,6 +491,7 @@ hr {
 
     &.warning {
         .mixin-button-color(@white-color, @warning-color);
+        
         border: 1px solid @warning-color;
 
         &:hover, &:focus {
@@ -499,6 +501,7 @@ hr {
 
     &.danger {
         .mixin-button-color(@white-color, @danger-color);
+        
         border: 1px solid @danger-color;
 
         &:hover, &:focus {
