removed authors at top of file replaced with copy(right/left) statement

--- a/src/less/potato.less
+++ b/src/less/potato.less
@@ -1,10 +1,6 @@
-/*| PotatoCSS
-|*| Author   : Edvins Antonovs <https://github.com/ummahusla>, Jack Andrew Loudon <https://github.com/blue-eyeswhitedragon>, Verónica Lona <https://github.com/vmmartinezlona>
-|*| Date     : 14th October 2016
-|*| License  : <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/license.md>
-\*/
+/*! PotatoCSS (c) Edvins Antonovs <https://github.com/ummahusla> under the MIT license <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/LICENSE.md> */
 
-// Set charset
+//* Set charset *//
 
 @charset "UTF-8";
 
