--- a/src/sass/potato.scss
+++ b/src/sass/potato.scss
@@ -1,10 +1,6 @@
-/*| PotatoCSS
-|*| Author   : Edvins Antonovs <https://github.com/ummahusla>, Verónica Lona <https://github.com/vmmartinezlona>, Jack Andrew Loudon <https://github.com/blue-eyeswhitedragon>
-|*| Date     : 11th October 2016
-|*| License  : <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/license.md>
-\*/
+/*! PotatoCSS (c) Edvins Antonovs <https://github.com/ummahusla> under the MIT license <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/LICENSE.md> */
 
-// Set charset
+//* Set charset *//
 
 @charset "UTF-8";
 
