--- a/src/less/potato.less
+++ b/src/less/potato.less
@@ -1,4 +1,4 @@
-/*! PotatoCSS (c) Edvins Antonovs <https://github.com/ummahusla> under the MIT license <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/LICENSE.md> */
+/*! PotatoCSS (c) Edvins Antonovs 2016 <https://github.com/ummahusla> under the MIT license <https://raw.githubusercontent.com/ummahusla/PotatoCSS/master/LICENSE.md> */
 
 //* Set charset *//
 
