Import file lost in merge, this is the fix

--- a/src/less/_partials/_variables.less
+++ b/src/less/_partials/_variables.less
@@ -42,7 +42,7 @@
 
 //* Heading (h1, h2, h3, etc...) traits *//
 
-@heading-margin: .5em 0;
+@heading-margin: 5px 0;
 @heading-font-family: inherit;
 @heading-font-color: @primary-color;
 @heading-font-size-divisory-denominator: 8;
