--- a/src/less/_partials/_variables.less
+++ b/src/less/_partials/_variables.less
@@ -5,6 +5,7 @@
 @primary-color: #333;
 @border-color: #ccc;
 @white-color: #fff;
+@info-color: #3697c1;
 @success-color: #27ae60;
 @warning-color: #f39c12;
 @danger-color: #e74c3c;
