--- a/src/sass/_partials/_buttons.scss
+++ b/src/sass/_partials/_buttons.scss
@@ -7,6 +7,16 @@
         @include button-color($primary-color, $white-color);
     }
 
+    &.info {
+        @include button-color($white-color, $info-color);
+        
+        border: 1px solid $info-color;
+
+        &:hover, &:focus {
+            @include button-color($info-color, $white-color);
+        }
+    }
+    
     &.success {
         @include button-color($white-color, $success-color);
         
