Basic Table (Semi-responsive)

--- a/src/less/_partials/_forms.less
+++ b/src/less/_partials/_forms.less
@@ -12,6 +12,49 @@
     margin: 0 0 20px 0;
     padding: 0 10px;
     width: 100%;
+    
+        // ::placeholder supported in IE 10+ (http://caniuse.com/css-placeholder/embed/), this will turn off in unsupport browsers, so no biggie.
+    
+    &:focus {
+        border-color: @primary-color !important;
+        &::placeholder {
+            color: @primary-color !important;
+        }
+    }
+    
+    &.info {
+        border-color: @info-color;
+        
+        &::placeholder {
+            color: @info-color;
+        }
+        
+    }
+    
+    &.success {
+        border-color: @success-color;
+        
+        &::placeholder {
+            color: @success-color;
+        }
+    }
+    
+    &.warning {
+        border-color: @warning-color;
+        
+        &::placeholder {
+            color: @warning-color;
+        }
+    }
+    
+    &.danger,
+    &.error {
+        border-color: @danger-color;
+        
+        &::placeholder {
+            color: @danger-color;
+        }
+    }
 }
 
 input[type="text"] {
