--- a/src/less/potato.less
+++ b/src/less/potato.less
@@ -15,7 +15,8 @@
 @import "@{DIRECTORY}_typography";
 @import "@{DIRECTORY}_grid";
 @import "@{DIRECTORY}_sectioning";
-@import "@{DIRECTORY}_lists";
-@import "@{DIRECTORY}_forms";
 @import "@{DIRECTORY}_buttons";
+@import "@{DIRECTORY}_tables";
+@import "@{DIRECTORY}_forms";
+@import "@{DIRECTORY}_lists";
 @import "@{DIRECTORY}_util";
