--- a/src/sass/potato.scss
+++ b/src/sass/potato.scss
@@ -13,7 +13,8 @@
 @import "_partials/_typography";
 @import "_partials/_grid";
 @import "_partials/_sectioning";
-@import "_partials/_lists";
-@import "_partials/_forms";
 @import "_partials/_buttons";
+@import "_partials/_tables";
+@import "_partials/_forms";
+@import "_partials/_lists";
 @import "_partials/_util";
