--- a/src/less/_partials/_util.less
+++ b/src/less/_partials/_util.less
@@ -35,3 +35,15 @@
 .font-bold {
     font-weight: bold;
 }
+
+.allow-overflow {
+    overflow: auto;
+    
+    &-x {
+        overflow-y: auto;
+    }
+    
+    &-y {
+        overflow-y: auto;
+    }
+}
